# SepholiaCards

./: .gitignore  Cargo.toml  Makefile  dfx.json  package-lock.json  package.json  vite.config.ts
artifacts/@openzeppelin/contracts/interfaces/draft-IERC6093.sol/: IERC1155Errors.dbg.json
artifacts/@openzeppelin/contracts/token/ERC721/extensions/IERC721Metadata.sol/: IERC721Metadata.dbg.json
artifacts/@openzeppelin/contracts/utils/math/Math.sol/: Math.dbg.json
artifacts/contracts/CardNFT.sol/: CardNFT.dbg.json  CardNFT.json
cache/: solidity-files-cache.json
src/react_demo_backend/: Cargo.toml  react_demo_backend.did
src/react_demo_backend/src/: lib.rs
src/react_demo_frontend/: index.html
src/react_demo_frontend/src/: App.tsx  index.css  main.tsx
src/react_demo_frontend/src/components/header/: Header.tsx  PrincipalDialog.tsx  SessionDialog.tsx
src/react_demo_frontend/src/components/login/: LoginPage.tsx
src/react_demo_frontend/src/components/nft-mint/: NftMint.tsx
src/react_demo_frontend/src/components/profile/: AllProfiles.tsx
src/react_demo_frontend/src/components/token_gating/: NoteList.tsx  TokenGating.tsx
src/react_demo_frontend/src/components/ui/: Button.tsx  Pill.tsx
src/react_demo_frontend/src/ic/: IdentityProvider.tsx  siwe-service.type.ts
src/react_demo_frontend/src/wagmi/: wagmi.config.ts
src/token_gating/: Cargo.toml  token_gating.did
src/token_gating/src/: lib.rs  vetkd_types.rs
