[package]
name = "react_demo_backend"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.9.11"
candid_derive = "0.6.4"
ic-cdk = "0.11.3"
log = "0.4"
ic_siwe = { path = "../../../ic-siwe-rust/packages/ic_siwe" }
serde = "1.0.193"
serde_json = "1.0.108"
ic-stable-structures = "0.6.0"
serde_bytes = "0.11"
